--- a/AndreiPopa/package.json
+++ b/AndreiPopa/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/NagarroLabs/practica20#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4"
   }
 }
